--- a/styleGlobal.css
+++ b/styleGlobal.css
@@ -7,3 +7,72 @@ header {
     font-size: 20px;
     color: black;
   }
+
+nav {
+    float: left;
+    padding: 10px;
+    height: 100%;
+    width: 100px;
+    background-color: lightgray;
+}
+
+h2 {
+    text-align: center;
+}
+table, th, td{
+    border: 2px;
+    border-style: solid
+}
+
+article {
+    padding: 10px;
+    
+    
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+footer{
+    padding: 10px;
+    text-align: center;
+    background-color: cyan;
+    height: 50px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    background-color: green;
+    padding: 5px;
+}
+.item {
+    background-color: orangered;
+    padding: 10px;
+    text-align: center;
+    border: 2px solid black;
+}
+.item2 {
+    background-color: lightblue;
+    padding: 10px;
+    text-align: center;
+    border: 2px solid black;
+}
+.item3 {
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    border: 2px solid black;
+
+}
+.item4 , .item5, .item6 {
+    
+    text-align: center;
+    padding: 10px;
+    background-color: aquamarine;
+    border: 2px solid black;
+}
+
+
