--- a/styleGlobal.css
+++ b/styleGlobal.css
@@ -74,5 +74,18 @@ footer{
     background-color: aquamarine;
     border: 2px solid black;
 }
+ .flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: blueviolet;
+    justify-content: center;
+ }
 
+ .flex-container > div {
+    background-color: aquamarine;
+    width: 100px;
+    text-align: center;
+    margin: 10px;
+    line-height: 50px;
 
+ }
